--- a/WinForm/App.config
+++ b/WinForm/App.config
@@ -21,8 +21,8 @@
      <appSettings>
        <!--   https://www.cnblogs.com/liangwenchao-912/p/5084076.html -->  
         <!-- Language的值只能是Chinese（中文），English（英文） -->
-        <add key="Language" value="English"/>
-       <add key="Language1" value="Chinese"/>       
+        <add key="Language1" value="English"/>
+       <add key="Language" value="Chinese"/>       
      </appSettings> 
   
 </configuration>
